...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="toc-cU-V8S">
                                <constraints>
                                    <constraint firstAttribute="width" constant="213" id="HX5-Po-6ra"/>
                                    <constraint firstAttribute="height" constant="44" id="eHH-Uu-G7M"/>
                                </constraints>
                                <state key="normal" title="广角正全景测试"/>
                                <connections>
                                    <action selector="plainTest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="knT-Hx-ap1"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="08d-eH-shl">
                                <constraints>
                                    <constraint firstAttribute="width" constant="213" id="mLN-G7-0vj"/>
                                    <constraint firstAttribute="height" constant="44" id="noV-mz-yX6"/>
                                </constraints>
                                <state key="normal" title="中心全景测试"/>
                                <connections>
                                    <action selector="panoramaTest:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0h0-1o-tda"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NPL-VO-VaF">
                                <constraints>
...
